@@ -8,6 +8,7 @@ Backup and Migrate 5.0.x-dev, xxxx-xx-xx
 #3186638 by bgilhome, DamienMcKenna: Schema for plugin 'config' keys.
 #3186656 by fgm, DamienMcKenna: Use state API instead of custom KV collection
   for last run.
+#3210689 by DamienMcKenna, MichaelvonB: Can't restore backups.
 
 
 Backup and Migrate 5.0.0-rc2, 2020-09-28
